News and updates

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,4 +1,4 @@
-<div class="news">
+<div class="news" style="margin-top: 15px">
   <h2>news</h2>
   {% if site.news  %}
     <div class="table-responsive">
