--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,6 +52,12 @@ blockquote {
   color: var(--global-theme-color);
 }
 
+
+// Description (IPA handling)
+.desc {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 // Profile
 
 .profile {
