--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title">
      {% if site.title == "blank" %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }}{% endif %}
     </h1>
-    <p class="desc"> <!-- style="font-family:'Courier New'"> --> {{ page.description }}</p>
+    <p class="desc">{{ page.description }}</p>
   </header>
 
   <article style="margin-top: 30px">
