--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,6 +52,12 @@ blockquote {
   color: var(--global-theme-color);
 }
 
+// Description
+
+.desc{
+  font-size: 0.97rem;
+}
+
 // Profile
 
 .profile {
