Added code&data button. New posts

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -168,6 +168,12 @@
     {% if entry.code %}
       <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Code</a>
     {% endif %}
+    {% if entry.data %}
+      <a href="{{ entry.data }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Data</a>
+    {% endif %}
+    {% if entry.code_and_data %}
+      <a href="{{ entry.code_and_data }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Code/Data</a>
+    {% endif %}
     {% if entry.poster %}
       {% if entry.poster contains '://' %}
       <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Poster</a>
