Changed rendering for papers with a long author list

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -50,8 +50,10 @@
             {% endif %}
           {% else %}
             {% if forloop.length > 10 and forloop.index == num_first_authors %}
+              {% assign self_mentioned_flag = false %}
               {% if num_first_authors > 1 %}
                 {% if author_is_self %}
+                  {% assign self_mentioned_flag = true %}
                   <em>{{author.first}} {{author.last}}</em><span style="color:var(--global-theme-color)">*</span>
                 {% else %}
                   {% if coauthor_url %}
@@ -62,6 +64,7 @@
                 {% endif %}
               {% else %}
                 {% if author_is_self %}
+                  {% assign self_mentioned_flag = true %}
                   <em>{{author.first}} {{author.last}}</em>
                 {% else %}
                   {% if coauthor_url %}
@@ -71,7 +74,11 @@
                   {% endif %}
                 {% endif %}
               {% endif %}
-              et al.
+              {% if self_mentioned_flag %}
+                et al.
+              {% else %}
+                et al., including <em>{{site.scholar.first_name[0]}} {{site.scholar.last_name}}</em>
+              {% endif %}
               {% break %}
             {% endif %}
             {% unless forloop.last %}
