--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,6 +1,6 @@
 <div class="talks">
   <h3>Invited talks</h3>  
-  <ol class="bibliography">
+  <ol class="presentations">
     {% assign talks = site.talks | reverse %}
     {% for item in talks %}
       <li><div class="row">
