--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -135,6 +135,8 @@
         <em>{{entry.journal}},</em>
       {% elsif entry.type == "inproceedings" %}
         <em>In {{entry.booktitle}}</em>
+      {% elsif entry.type == "phdthesis" %}
+        <em>Ph.D. dissertation, {{entry.school}},</em>
       {% endif %}
       {% if entry.month %}
         {{entry.month | capitalize}}
