--- a/_includes/social.html
+++ b/_includes/social.html
@@ -7,6 +7,7 @@
 {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
 {% if site.linkedin_username %}<a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
 {% if site.twitter_username %}<a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
+{% if site.mastodon_url %}<a rel="me" href="{{ site.mastodon_url }}" title="Mastodon"><i class="fab fa-mastodon"></i></a>{% endif %}
 {% if site.medium_username %}<a href="https://medium.com/@{{ site.medium_username }}" title="Medium"><i class="fab fa-medium"></i></a>{% endif %}
 {% if site.quora_username %}<a href="https://www.quora.com/profile/{{ site.quora_username }}" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
 {% if site.blogger_url %}<a href="{{ site.blogger_url }}" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
