--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
 <!-- Styles -->
 
 {% if site.icon != empty %}
-<link rel="shortcut icon" href="{{ site.icon | prepend: '/assets/img/' | relative_url}}"/>
+<link rel="shortcut icon" href="{{ site.icon | prepend: '/assets/img/' | relative_url}}">
 {% endif %}
 
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
